update index.html dan buat index2.html
1. index.html = update, merubah ukuran gambar 2 dan 4
2. index2.html = membuat baru [ sejarah singkat ]
3. style.css = update

--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
                 <span class="visually-hidden">Toggle Dropdown</span>
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="https://smk.kemdikbud.go.id/">kemdikbud</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="https://smk.kemdikbud.go.id/">DitPSMK-Kementrian Pendidikan dan Kebudayaan</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                <li><a class="dropdown-item" href="#">PPDB SMKN 1 Nilasari</a></li>
               </ul>
             </div>
           </li>
@@ -81,56 +79,56 @@
       <div class="container-sm justify-content-center">
         <ul class="nav" id="nav-pills">
           <li class="nav-item" style="border-left-width: 2px; border-left-style: solid; border-left-color: white">
-            <a class="nav-link bg-warning" aria-current="page" href="#">Beranda</a>
+            <a class="nav-link bg-warning" aria-current="page" href="index.html">Beranda</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profil</a>
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profil</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sejarah Singkat</a></li>
+              <li><a class="dropdown-item" href="index2.html">Sejarah Singkat</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Visi dan Misi</a></li>
+              <li><a class="dropdown-item" href="index3.html">Visi dan Misi</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Profil Kelompok</a></li>
+              <li><a class="dropdown-item" href="index4.html">Profil Kelompok</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Sekolah</a>
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Sekolah</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Program Kerja</a></li>
+              <li><a class="dropdown-item" href="index5.html">Program Kerja</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Teaching Factory dan Program Inovasi</a></li>
+              <li><a class="dropdown-item" href="index6.html">Teaching Factory dan Program Inovasi</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Program Pengembangan Sekolah</a></li>
+              <li><a class="dropdown-item" href="index7.html">Program Pengembangan Sekolah</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Keahlian</a>
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Keahlian</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Teknik Eletronika Industri</a></li>
+              <li><a class="dropdown-item" href="index8.html">Teknik Eletronika Industri</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Teknik Otomasi Industri</a></li>
+              <li><a class="dropdown-item" href="index9.html">Teknik Otomasi Industri</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Rekayasa Perangkat Lunak</a></li>
+              <li><a class="dropdown-item" href="index10.html">Rekayasa Perangkat Lunak</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sarana Prasarana</a>
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sarana Prasarana</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sarana Infrastruktur</a></li>
+              <li><a class="dropdown-item" href="index11.html">Sarana Infrastruktur</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Sarana Pembelajaran</a></li>
+              <li><a class="dropdown-item" href="index12.html">Sarana Pembelajaran</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Galeri</a>
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Galeri</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Foto</a></li>
+              <li><a class="dropdown-item" href="index13.html">Foto</a></li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Video</a></li>
+              <li><a class="dropdown-item" href="index14.html">Video</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Kontak</a>
+            <a class="nav-link btn-outline-warning" href="index15.html">Kontak</a>
           </li>
         </ul>
       </div>
@@ -272,7 +270,7 @@
             <!--Sidebar-->
             <div class="row">
               <div class="col-md">
-                <div class="card" style="width: 620px">
+                <div class="card" style="width: 620px; margin-bottom: 20px">
                   <div class="card-body">
                     <h5 class="card-title">Implementasi/Penerapan Budaya Kerja Industri di SMKN 1 Nilasari</h5>
                     <p class="card-text">SMKN 1 Nilasari, 5 Januari 2020 Sebagai bentuk implementasi dari...</p>
@@ -281,7 +279,7 @@
                 </div>
               </div>
               <div class="col-md">
-                <div class="card mb-3" style="width: 620px">
+                <div class="card mb-3" style="width: 620px; background-color: #f3f3f3">
                   <div class="row g-1">
                     <div class="col-md-4">
                       <img src="image/2.jpg" alt="..." />
@@ -296,7 +294,7 @@
                 </div>
               </div>
               <div class="col-md">
-                <div class="card mb-3" style="max-width: 620px">
+                <div class="card mb-3" style="max-width: 620px; background-color: #f3f3f3">
                   <div class="row g-0" style="width: auto">
                     <div class="col-md-4">
                       <img src="image/4.jpg" alt="..." />
