Membuat index3.html dan update
1. Membuat file baru index3.html terkait Visi dan Misi
2. Update index.html dan style.css

--- a/index2.html
+++ b/index2.html
@@ -140,7 +140,7 @@
       <div class="container">
         <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Beranda</a></li>
+            <li class="breadcrumb-item"><a href="index.html">SMK Negeri 1 Nilasari</a></li>
             <li class="breadcrumb-item active" aria-current="page">Sejarah Singkat</li>
           </ol>
         </nav>
@@ -150,10 +150,10 @@
 
     <!--Sejarah Singkat-->
     <div class="section">
-      <div class="container">
+      <div class="container" style="text-align: justify;">
         <br />
         <br />
-        <h3>Sejarah Singkat</h3>
+        <h3 style=color:#294a70;"><b>Sejarah Singkat</b></h3>
         <br />
         <p>
           SMK Negeri 1 Nilasari (STM Pembangunan Tangerang) merupakan salah satu Lembaga Pendidikan Menengah Kejuruan di Kota Tangerang, Jawa Barat yang menyelenggarakan Program Pendidikan Kejuruan 4 Tahun, dan merupakan salah satu SMK dari 8
