--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
   <body>
     <!--tophead-->
     <section class="tophead">
-      <div class="container">
+      <div class="container-sm">
         <ul class="ul-tophead">
           <li class="li-tophead">
             <a href="tel:021555678" style="text-decoration: none; color: inherit">021-555678</a>
@@ -33,11 +33,9 @@
                 <span class="visually-hidden">Toggle Dropdown</span>
               </button>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="https://smk.kemdikbud.go.id/">DitPSMK-Kementrian Pendidikan dan Kebudayaan</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Separated link</a></li>
+                <li><a class="dropdown-item" href="#">PPDB SMKN 1 Nilasari</a></li>
               </ul>
             </div>
           </li>
@@ -48,17 +46,17 @@
 
     <!--Head-->
     <header>
-      <div class="container">
+      <div class="container overflow-auto">
         <div class="row">
-          <div class="col-md-1">
-            <img src="image/logo.png" alt="logo" />
+          <div class="col-sm-1">
+            <img src="image/logo.png" class="rounded mx-auto" alt="logo" />
           </div>
-          <div class="col-md-7">
-            <h1>SMK Negeri 1 Nilasari</h1>
+          <div class="col-sm-7">
+            <h1>SMK NEGERI 1 NILASARI</h1>
             <p>SMK UNGGULAN YANG MENGHASILKAN SDM BERMUTU DAN BERDAYA SAING TINGGI</p>
           </div>
-          <div class="col-md-4">
-            <form class="d-flex">
+          <div class="col-sm-4">
+            <form class="d-flex pt-4">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
               <button class="btn btn-outline-success" type="submit" id="search">Search</button>
             </form>
@@ -68,90 +66,118 @@
     </header>
     <!--Akhir Head-->
 
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container">
-        <ul class="nav nav-tabs justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Beranda</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profil</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="index2.html">Sejarah Singkat</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="index3.html">Sejarah Pengembangan</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="index4.html">Visi dan Misi</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Profil Kelompok Empat</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Sekolah</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Program Kerja</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Hubungan Industri</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Teaching Factory dan Program Inovasi</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Program Pengembangan Sekolah</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Keahlian</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">TEKNIK ELEKTRONIKA INDUSTRI</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">TEKNIK OTOMASI INDUSTRI</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">SISTEM INFORMASI JARINGAN DAN APLIKASI</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">REKAYASA PERANGKAT LUNAK</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sarana Prasarana</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Sarana Infrastruktur</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Sarana Pembelajaran</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Kegiatan Sekolah</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Ekstrakulikuler</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Laporan Kegiatan Sekolah</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Galeri</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Foto</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Video</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index21.html" tabindex="-1" aria-disabled="true">Kontak</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!--Akhir Navbar-->
-
     <!--Marquee-->
-    <section class="Marquee bg-warning">
+    <section class="Marquee">
       <div class="container" id="marquee">
         <marquee behavior="left" direction="" onmouseover="this.stop()" onmouseout="this.start()">Selamat Datang di Web SMK Negeri 1 Nilasari</marquee>
       </div>
     </section>
     <!--Akhir Marquee-->
 
-    <h1>index3</h1>
+    <!--Navbar-->
+    <nav class="navbar">
+      <div class="container-sm justify-content-center">
+        <ul class="nav" id="nav-pills">
+          <li class="nav-item" style="border-left-width: 2px; border-left-style: solid; border-left-color: white">
+            <a class="nav-link bg-warning" aria-current="page" href="index.html">Beranda</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profil</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="index2.html">Sejarah Singkat</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index3.html">Visi dan Misi</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index4.html">Profil Kelompok</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Sekolah</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="index5.html">Program Kerja</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index6.html">Teaching Factory dan Program Inovasi</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index7.html">Program Pengembangan Sekolah</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Program Keahlian</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="index8.html">Teknik Eletronika Industri</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index9.html">Teknik Otomasi Industri</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index10.html">Rekayasa Perangkat Lunak</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sarana Prasarana</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="index11.html">Sarana Infrastruktur</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index12.html">Sarana Pembelajaran</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle btn-outline-warning" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Galeri</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="index13.html">Foto</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="index14.html">Video</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn-outline-warning" href="index15.html">Kontak</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--akhir navbar-->
+
+    <!--Breadcrumb-->
+    <div class="section" style="background-color: #f3f3f3; padding-top: 10px; padding-bottom: 10px; font-size: larger">
+      <div class="container">
+        <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">SMK Negeri 1 Nilasari</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Visi dan Misi</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+    <!--Akhir Breadcrumb-->
+
+    <!--Sejarah Singkat-->
+    <div class="section">
+      <div class="container" style="text-align: justify;">
+        <br />
+        <br />
+        <h3 style=color:#294a70;"><b>Visi dan Misi</b></h3>
+        <br />       
+
+        <h5>VISI</h5>
+        <p>MENJADI SMK UNGGULAN YANG ENGHASILKAN SUMBER DAYA MANUSIA BERMUTU DAN BERDAYA SAING TINGGI</p>
+        
+        <h5>MISI</h5>
+
+        <ol>
+          <li>Membangun siswa yang menjunjung tinggi norma agama, budaya bangsa dan budi pekerti luhur.</li>
+          <li>Menghasilkan siswa yang cerdas, terampil, kompetitif, inovatif, kreatif, dan mandiri serta memiliki jiwa kewirausahaan.</li>
+          <li>Menyiapkan siswa menjadi tenaga kerja tangguh yang mampu bersaing di tingkat regional maupun global.</li>
+          <li>Menumbuh kembangkan budaya kerja industri yang berwawasan lingkungan.</li>
+          <li>Meningkatkan pelayanan pendidikan dan pengelolaan sekolah melalui layanan prima</li>
+        </ol>       
+
+        <br /><br />
+        <hr />
+        <!--garis horizontal-->
+        <br />
+      </div>
+    </div>
+
+    <!--Akhir Sejarah Singkat-->
+    
 
     <!--Top footer-->
     <section id="top-footer">
@@ -170,7 +196,7 @@
               <div class="col-md"><img src="ikon/twitter.png" alt="twitter" /></div>
               <div class="col-md"><img src="ikon/youtube.png" alt="youtube" /></div>
             </div>
-            <div class="row">
+            <div class="row" style="padding: 20px">
               <div class="col-md">Ayo Follow dan Ikuti informasi seputar kegiatan di SMK Negeri 1 Nilasari di social media kami.</div>
             </div>
           </div>
@@ -207,12 +233,12 @@
           <li>I</li>
           <li class="li-footer">Kontak Kami</li>
         </ul>
-        <p id="footer" style="text-align: center; color: white">All Rights Reserved © TIM ICT 2021. SMKN 1 Nilasari</p>
+        <p id="footer" style="text-align: center; color: white">Abdul Wachid - Nila Nurmala - Yuli Saputra - Ibnu Abdul Azis</p>
         <ul class="ul-footer">
           <li class="li-footer">Proudly powered by Bootstrap</li>
           <li class="li-footer">I</li>
-          <li class="li-footer">Created with Love by</li>
-          <li class="li-footer">Kelompok Satu</li>
+          <li class="li-footer">Created with Love by Kelompok Satu</li>
+          <li class="li-footer"></li>
         </ul>
       </div>
     </footer>
